# Programmiertechnik-2

ex1/: .gitmodules  CMakeLists.txt  readme.md
ex1/src/: CMakeLists.txt  Lösungshilfe  grading_table.cpp  grading_table.h  grading_tasks.cpp  grading_tasks.h  main.cpp
ex1/tests/: tests.cpp
ex2/: .gitignore  CMakeLists.txt  README.md  package-lock.json
ex2/src/: Queue.h  Set.h  Stack.h  arithmetic.cpp  coins.cpp  repl.cpp  set_operations.cpp
ex2/tests/: test_arithmetic.cpp  test_set_impl.cpp  test_set_operations.cpp  test_stack_impl.cpp  tests.cpp
ex3-sorting/: CMakeLists.txt  README.md  questions  solution.md
ex3-sorting/src/: generator.cpp  generator.h  generator.h.gch  main.cpp  sort_program  sorting.cpp  sorting.h
ex3-sorting/tests/: tests.cpp
ex4-hashing/: README.md
ex4-hashing/data/: genome_substr.csv
ex4-hashing/src/: BloomFilter.h  bloom_cli.cpp  bst.h  closure_example.cpp  hash.h  random_string.cpp  trie.h  trie_cli.cpp
ex4-hashing/tests/: test_bloom.cpp  test_bst_duplicates.cpp  test_trie.cpp  tests.cpp
ex5-graphs/: README.md
ex5-graphs/data/: DATASOURCE.md  airports.csv  routes.csv
ex5-graphs/src/: a_star.h  distances.h  load_airports.cpp  routing_cli.cpp  weighted_struct_digraph.h
ex5-graphs/src/vlib/: bag.h  digraph.cpp  digraph.h  dijkstra.h  index_min_pq.h  min_pq.h  redblack_bst.h  stack.h  symbol_digraph.h  weighted_digraph.cpp  weighted_digraph.h
ex5-graphs/tests/: TestAirport.h  test_a_star.cpp  test_distances.cpp  test_load_data.cpp  test_struct_graph.cpp  tests.cpp
